updated markup and added scss partials

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -15,5 +15,9 @@
         &__li {
             list-style: none;
             margin-right: 20px;
+            & a {
+                text-decoration: none;
+                color: inherit;
+            }
     }  
 }
