--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -8,111 +8,27 @@ main {
     width: 100%;
 }
 
-.main-presentation {
-    margin-bottom: 70px;
-    font-size: 40px;
-    font-weight: 400;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    &__headline {
-        color: #4A4FF2;
-        font-size: 22px;
-    }
-    &__info {
-        font-weight: 700;
-        width: 60%;
-    }
-    &__purple-text {
-        color: #4A4FF2;
-    }
-    &__quote {
-        align-self: flex-end;
-        font-style: italic;
-        font-weight: 400;
-        font-size: 18px;
-        width: 40%;
-    }
+@import '_main-presentation';
+@import '_main-grid-container';
+@import '_service-list';
+@import '_awards';
+@import '_project-presentation';
+@import '_project-grid-container';
+@import '_project-grid-container';
+@import '_contact-us';
+
+.project-information {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    opacity: 0.8;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
-.main-grid-container {
-    display: grid; 
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: auto auto auto auto;
-    margin-bottom: 70px;
-    height: 1960px;
+.red-carpet-pic {
+    margin: 0 auto;
     max-width: 1110px;
     width: 100%;
-    grid-gap: 15px;
-    
-    &__first {
-        grid-row: 1/8;
-        grid-column: 1/4;
-    }
-    &__second {
-        grid-row: 8/16;
-        grid-column: 1/4;
-    }
-    &__third {
-        grid-row: 16/24;
-        grid-column: 1/4;
-    }
-    &__fourth {
-        grid-row: 24/33;
-        grid-column: 1/4;
-    }
-    &__fifth {
-        grid-row: 1/7;
-        grid-column: 4/7;
-    }
-    &__sixth {
-        grid-row: 7/14;
-        grid-column: 4/7;
-    }
-    &__seventh {
-        grid-row: 14/23;
-        grid-column: 4/7;
-    }
-    &__eighth {
-        grid-row: 23/33;
-        grid-column: 4/7;
-    }
-    &__ninth {
-        grid-row: 1/11;
-        grid-column: 7/10;
-    }
-    &__tenth {
-        grid-row: 11/18;
-        grid-column: 7/10;
-    }
-    &__eleventh {
-        grid-row: 18/27;
-        grid-column: 7/10;
-    }
-    &__twelveth {
-        grid-row: 27/33;
-        grid-column: 7/10;
-    }
 }
 
-.service-list {
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 18px;
-    margin-bottom: 70px;
-    &__text {
-        font-weight: bold;
-        font-size: 28px;
-        width: 55%;    
-    }
-    &__lists {
-        display: flex;
-        flex-direction: row;
-    }
-        &__li {
-            list-style: none;
-        }
-}
